--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,10 @@ http {
            rewrite /server_name/(.*) /$1 break;
            proxy_pass https://server_name.com/;
            proxy_set_header Origin "";
+           proxy_set_header Connection "upgrade";
+           proxy_read_timeout 86400;
+           proxy_http_version 1.1;
+           proxy_set_header Upgrade $http_upgrade;
 
         }
 
